src/objects/vlocity_ins__FulfilmentRequestDecompRelationship__c.object
<CustomObject>
    <description>Links source Order/Fulfilment Request and a Fulfilment Request that is a result of this decomposition</description>
    <fields>
        <fullName>vlocity_ins__DestinationFulfilmentRequestId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Destination Fulfilment Request</description>
        <inlineHelpText>Destination Fulfilment Request</inlineHelpText>
        <label>DestinationFulfilmentRequestId</label>
        <referenceTo>vlocity_ins__FulfilmentRequest__c</referenceTo>
        <relationshipLabel>Source Decomposition Relationships</relationshipLabel>
        <relationshipName>FulfilmentRequestDecompRelationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceFulfilmentRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SourceFulfilmentRequestId</description>
        <inlineHelpText>SourceFulfilmentRequestId</inlineHelpText>
        <label>Source Fulfilment Request</label>
        <referenceTo>vlocity_ins__FulfilmentRequest__c</referenceTo>
        <relationshipLabel>Source Decomposition Relationships</relationshipLabel>
        <relationshipName>FulfilmentRequestDecompRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Order</description>
        <inlineHelpText>Source Order</inlineHelpText>
        <label>Source Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Decomposition Relationships</relationshipLabel>
        <relationshipName>FulfilmentRequestDecompRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fulfilment Request Decomposition Rel</label>
    <nameField>
        <label>Decomposition Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfilment Request Decomposition Rels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>